# ThreatSense-AI

./: README.md
ids_v2_windows/: README.md
ids_v2_windows/cpp/: CMakeLists.txt  main.cpp
ids_v2_windows/cpp/common/: Types.h
ids_v2_windows/cpp/core/: Collector.h  FeatureEngineer.h  PacketSniffer.h
ids_v2_windows/cpp/detection/: MLClient.h  ThreatDetector.h
ids_v2_windows/cpp/response/: AlertManager.h  FirewallController.h
ids_v2_windows/cpp/utils/: Config.h  Logger.h
ids_v2_windows/python/: dashboard.py  ml_service.py  requirements.txt  trainer.py
ids_v2_windows/python/models/: anomaly_model.py  attack_classifier.py
